@@ -1,3 +1,8 @@
+2007-11-05  Yevgen Muntyan  <muntyan@tamu.edu>
+
+	* tools/extra_defs_gen/generate_defs_gtk.cc: Added ifdefs around the 
+	unix-specific printer objects, to fix the build on Windows.
+
 2007-11-05  Murray Cumming  <murrayc@murrayc.com>
 
 	* gdk/src/drawable.hg: Added a const overload of get_size() 
